--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,8 @@ body {
     background-color: orangered;
 }
 
+
+
 body a {
     display: flex;
     justify-content: center;
@@ -19,4 +21,11 @@ body h2 {
     align-items: center;
     padding-right: 5%;
     padding-left: 5%;
+}
+
+#hairline img, #inst img{
+    width: 100%;
+    height: 80%;
+    overflow-x: scroll;
+    white-space: nowrap;
 }
