--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,11 +8,18 @@ body a {
     display: flex;
     justify-content: center;
     padding: 5%;
+    text-decoration: underline;
 }
 
-body h2 {
-    background-color: yellow;
-    color: blue;
+body button {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+body p, body h1, body p, h2 {
+    background-color: rgb(226, 226, 118);
+    color: rgb(75, 75, 156);
     font-style: bold;
     display: flex;
     justify-content: center;
@@ -25,6 +32,25 @@ body h2 {
 
 #hairline img, #inst img{
     width: 100%;
-    height: 90%;
+    height: 100%;
     overflow-x: scroll;
 }
+
+.collapse {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 32px;
+  }
+  
+  .descriptions {
+    display: none;
+    overflow: hidden;
+  }
