--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,12 +30,6 @@ body p, body h1, body p, h2, li {
     padding-left: 5%;
 }
 
-#inst img{
-    width: 100%;
-    height: 100%;
-    overflow-x: scroll;
-}
-
 .scrolling-wrapper {
     overflow-x: scroll;
     overflow-y: hidden;
@@ -46,7 +40,7 @@ body p, body h1, body p, h2, li {
     display: inline-block;
 }
 
-.card img {
+.card a img {
     width: 90%;
     height: 90%;
 }
@@ -64,7 +58,7 @@ body p, body h1, body p, h2, li {
     outline: none;
     font-size: 32px;
   }
-  
+
   .descriptions {
     display: none;
     overflow: hidden;
