--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,3 +64,52 @@ body p, body h1, body p, h2, li {
       background-image: url("https://joshwmay.github.io/comix/public/img/background.PNG");
       background-repeat: repeat;
   }
+
+
+
+  @keyframes move1 {
+      0% {
+          top: 0;
+          right: -20px;
+    }
+     50% {
+          bottom: 0;
+          right: 0;
+    }
+    100% {
+          top: 500px;
+          right: 500px;
+    }
+  }
+
+  @-webkit-keyframes move1 {
+      0% {
+          top: 0;
+          right: -20px;
+    }
+     50% {
+          bottom: 0;
+          right: 0px;
+    }
+    100% {
+          bottom: 500px;
+          right: 500px;
+    }
+  }
+
+  #centaur {
+    animation-timing-function: linear;
+    animation-timing-function: ease;
+    animation-timing-function: ease-in;
+    animation-timing-function: ease-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-timing-function: ease;
+    -webkit-animation-timing-function: ease-in;
+    -webkit-animation-timing-function: ease-out;
+    -webkit-animation-timing-function: ease-in-out;
+    filter: grayscale(40%);
+    position: relative;
+    animation: move1 15s alternate infinite;
+    animation-delay: 3s;
+}
